Fixed logo missalignment.

--- a/src/styles/layout/navbar.scss
+++ b/src/styles/layout/navbar.scss
@@ -23,10 +23,12 @@ nav {
         z-index: 10;
         @include flex(center,space-between);
         #logo {
-            @include flex(center,null);
-            img {
-                width:30px;
-                margin-right: 20px;
+            a {
+                @include flex(center,null);
+                img {
+                    width:30px;
+                    margin-right: 20px;
+                }
             }
         }
         ul {
